--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "telegraf": "^4.11.2",
     "telegram-keyboard": "^2.3.2"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   }
 }
