--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 TOKEN="5824625543:AAEslB26tupftKCDQTs0OULDa1uYWxv6XfM"
 NODE_ENV= production
 WEBHOOKS_DOMAIN=white-marlin-kit.cyclic.app
-PORT=80
+WEBHOOKS_PORT=4000
